<resources>
    <string name="app_name">IHC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cantidad">Cantidad</string>
    <string name="objeto">Objeto</string>
    <string name="precio">Precio</string>
    <string name="monto">Monto</string>
    <string name="carro">Carrito de compras</string>
    <string name="eliminar1">1 eliminar</string>
    <string name="eliminar2">2 elimanar</string>
    <string name="eliminar3">3 eliminar</string>
    <string name="eliminar4">4 eliminar</string>
    <string name="violincar">Violin</string>
    <string name="guitarracar">Guitarra</string>
    <string name="pianocar">Piano</string>
    <string name="violacar">Viola</string>
    <string name="flautacar">Flauta</string>
    <string name="bateriacar">Bateria</string>
    <string name="vaciar">Vaciar carro</string>
    <string name="comprar">Comprar</string>
    <string name="cuerda">Instrumentos de cuerda</string>
    <string name="ordenar">Ordenar por:</string>
    <string name="marca">Marca</string>
    <string name="agregar">Agregar al carro</string>
    <string name="informacion">Mas informacion</string>
    <string name="filtrar">Filtrar</string>
    <string name="informe">Informe de ventas</string>
    <string name="usuario">Usuario</string>
    <string name="ganancia">Ganancia</string>
    <string name="descargar">Descargar</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="mensaje">Bienvenido a Paradise Muic. Aqui encontraras una variedad de instrumentos musicales a muy buen precio. Nos preocupamos por un buen servicio a nuestros clientes brindandoles atencion que se merecen con descuentos irresistibles</string>
    <string name="contraseña">Contraseña</string>
    <string name="no">¿No tienes una?</string>
    <string name="ingresars">Ingresar</string>
    <string name="percusion">Instrumentos de percusion</string>
    <string name="modificar">Modificar</string>
    <string name="seleccionar">Seleccionar instruemento</string>
    <string name="chelo">Chelo</string>
    <string name="stock">Ingresa nuevo stock</string>
    <string name="imagen">Cambiar imagen</string>
    <string name="guardar">Guardar cambios</string>
    <string name="viento">Instrumentos de viento</string>
    <string name="productos">Productos</string>
    <string name="casa">Inicio</string>






    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
