<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/casa" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/ingresars" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/carro" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/informe" />
        <item
            android:id="@+id/nav_manages"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/modificar" />
    </group>

    <item android:title="@string/productos">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_music_note_black_24dp"
                android:title="@string/cuerda" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_music_note_black_24dp"
                android:title="@string/viento" />
            <item
                android:id="@+id/nav_sendas"
                android:icon="@drawable/ic_music_note_black_24dp"
                android:title="@string/percusion" />
        </menu>
    </item>

</menu>
