<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmentos.fragmento_stock">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="139dp"
        android:layout_marginLeft="139dp"
        android:layout_marginTop="37dp"
        android:text="@string/modificar"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="331dp"
        android:text=""
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/button4"
        android:layout_marginLeft="1dp"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="84dp"
        android:text="@string/seleccionar"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView21"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginStart="3dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="-125dp"
        android:layout_alignLeft="@+id/textView7"
        android:layout_marginLeft="3dp">

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/guitarracar" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/flautacar" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/violincar" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bateriacar" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chelo" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="201dp"
        android:text="@string/stock"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/textView7"
        android:layout_marginLeft="0dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginBottom="173dp"
        android:ems="10"
        android:inputType="number"
        android:layout_alignLeft="@+id/textView7"
        android:layout_marginLeft="-2dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="115dp"
        android:text="@string/imagen"
        android:layout_alignLeft="@+id/textView7"
        android:layout_marginLeft="1dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-86dp"
        android:layout_marginBottom="44dp"
        android:text="@string/guardar"
        android:layout_alignRight="@+id/button"
        android:layout_marginRight="-86dp" />

</RelativeLayout>