<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmentos.fragmento_informe">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="36dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="219dp"
        android:layout_marginLeft="219dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/facebook" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="36dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="254dp"
        android:layout_marginLeft="254dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/linkendin" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="290dp"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/painterest" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="33dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="324dp"
        android:layout_marginLeft="324dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/twitter" />
    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView6"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-23dp"
        android:src="@drawable/logo1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="125dp"
        android:text="@string/informe"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="316dp"
        android:layout_height="148dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="220dp"
        android:scrollbars="horizontal|vertical"
        android:showDividers="beginning|middle|end">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/cantidad"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:text="@string/objeto"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:text="@string/ganancia"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="3 "
                android:textColor="@color/design_default_color_primary" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/violincar" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sergio" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="450.00" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="2"
                android:textColor="@color/design_default_color_primary" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guitarracar" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jordan" />

            <TextView

                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="600.00" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="3"
                android:textColor="@color/design_default_color_primary" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pianocar" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Diego" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1050.00" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="1"
                android:textColor="@color/design_default_color_primary" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/violacar" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Renato" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="150.00" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="4"
                android:textColor="@color/design_default_color_primary" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bateriacar" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Joel" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2000.00" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="2"
                android:textColor="@color/design_default_color_primary" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flautacar" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Marco" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100.00" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginBottom="126dp"
        android:text="@string/descargar"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>